refactor(runtimeconstantpooloom): modify