@@ -1,12 +1,32 @@
 package com.jun.chu.java.jvm.memeryError;
 
+import java.util.HashSet;
+import java.util.Set;
+
 /**
+ * jdk6:-vm 设置永久代大小 -XX:PermSize=6M -XX:MaxPermSize=6M
+ * jdk7:常量池已经移入到java堆 -Xmx6M
+ * jdk8:永久代已不存在，方法区是java堆的一部分 -XX:MetaspaceSize=6M -XX:MaxMetaspaceSize=6M(没有生效方法区还是不断增加)
+ *
  * @author chujun
  * @date 2022/1/27
  */
 public class RuntimeConstantPoolOOM {
     public static void main(String[] args) {
         strIntern();
+        Set<String> set = new HashSet();
+        long i = 0;
+        long count = 1;
+        boolean out = true;
+        while (true) {
+            long i1 = i++;
+            set.add(String.valueOf(i1).intern());
+            count++;
+            if (count > Integer.MAX_VALUE && out) {
+                System.out.println(count);
+                out = false;
+            }
+        }
     }
 
     /**
@@ -18,7 +38,7 @@ public class RuntimeConstantPoolOOM {
      * 前者很好理解，后者返回false是因为
      * str2.intern()是因为这个字符串在在家sun.misc.Version的launcher_name常量时就已经加载到常量池中，不符合"首次遇到"
      * 而str2是因为new出来的新对象"java"字符串
-     *
+     * <p>
      * 而在jdk6输出结果
      * ------------------------------------
      * false
